@@ -7,7 +7,7 @@ Standards-Version: 3.6.2
 
 Package: rkward
 Architecture: any
-Depends: kdebase (>= 4:3.2.0), r-base-core (>= 2.1.0), libstdc++6 (>= 4.0.1), php4-cli
+Depends: php4-cli, ${shlibs:Depends}
 Recommends: r-base-html
 Description: a KDE frontend to the R statistics language
  RKWard aims to become an easy to use, transparent frontend to R,
