@@ -1,1 +1,0 @@
-rkward: binary-without-manpage rkward.bin
