@@ -20,9 +20,6 @@ rkward \- A KDE frontend to R
 .SH SYNOPSIS
 .B rkward
 .RI [ options ] " [file]"
-.br
-.B bar
-.RI [ options ] " [file]"
 .SH DESCRIPTION
 This manual page documents briefly the
 .B rkward
