@@ -1,6 +1,10 @@
 rkward (0.3.6) unstable; urgency=low
 
   * new upstream release
+  * clean up manpage
+  * debian dir is not longer included in upstream; create non-native package
+  * create symlink rkward.bin.1 to rkward.1 and remove linitian expection (no man page)
+  * use ${shlibs:Depends} for runtime dependencies
   * specify --with-r-home in ./configure, in case there is more than one version of R installed
 
  -- Thomas Friedrichsmeier <tfry@users.sourceforge.net>  Sun, 23 Apr 2006 15:45:00 +0200
